# finml-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: universe_us_large.csv
data/: README.md
scripts/: analize_predictions.py  run_backtest.py  run_dataset.py  run_features.py  run_ingest_market.py  run_labels.py  run_pipeline.py  run_train.py
src/finml/backtest/: engine.py
src/finml/data/: io.py  schemas.py
src/finml/features/: market_features.py
src/finml/ingestion/: market.py
src/finml/ingestion/providers/: base.py  yahoo.py
src/finml/labels/: forward_returns.py
src/finml/training/: dataset.py  predict.py  train.py
