[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finml"
version = "0.1.0"
description = "Financial Machine Learning System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finml"]
